syntax = "proto3";
// protobuf vscode extension: https://marketplace.visualstudio.com/items?itemName=zxh404.vscode-proto3

message NullableString {
	oneof string {
		string value = 1;
	}
}

message NullableBool {
	oneof bool {
		bool value = 1;
	}
}

message NullableDouble {
	oneof double {
		double value = 1;
	}
}
